# cross-ping

./: .gitignore
cross-ping/: Cargo.toml  README.md  rust-toolchain.toml
cross-ping/app/: Cargo.toml
cross-ping/app/src/: lib.rs
cross-ping/client/: Cargo.toml
cross-ping/src/: lib.rs
cross-ping/tests/: gtest.rs
ping-receiver/artifacts/contracts/ping-reciever.sol/: IMessageQueueReceiver.json  PingReceiver.dbg.json  PingReceiver.json
ping-receiver/cache/: solidity-files-cache.json
ping-receiver/typechain-types/: IMessageQueueReceiver.ts  PingReceiver.ts  hardhat.d.ts  index.ts
ping-receiver/typechain-types/factories/: IMessageQueueReceiver__factory.ts  PingReceiver__factory.ts  index.ts
ping-reciever/: ping-reciever.sol
relayer/: .env  README.md  package-lock.json
relayer/src/: config.ts  ethereum.ts  main.ts  types.ts  vara.ts
