[package]
name = "cross-ping-client"
version = "0.1.0"
edition = "2024"

[dependencies]
sails-rs = { workspace = true }
mockall = { version = "0.12", optional = true }

[build-dependencies]
cross-ping-app = { path = "../app" }
sails-client-gen = { workspace = true }
sails-idl-gen = { workspace = true }

[features]
mocks = ["sails-rs/mockall", "dep:mockall"]